--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
   "dependencies": {
     "es6-promise": "^4.0.0",
     "front-matter": "^2.1.0",
+    "markdown-it": "^8.0.0",
+    "markdown-it-katex": "^2.0.3",
     "marked": "^0.3.6",
     "normalize.css": "^5.0.0",
     "prismjs": "^1.5.1",
