--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ script:
 
 after_script:
   - cd dist
-  - echo "inizio.github.io" > CNAME
+  # - echo "inizio.github.io" > CNAME
   - git add --all .
   - git commit --message "automatically update from travis-ci"
   - git push "https://${GH_TOKEN}@${GH_REF}" master:master --quiet
