use markdown-it, history mode

--- a/package.json
+++ b/package.json
@@ -63,7 +63,10 @@
     "es6-promise": "^4.0.0",
     "front-matter": "^2.1.0",
     "markdown-it": "^8.0.0",
+    "markdown-it-header-sections": "^0.2.2",
     "markdown-it-katex": "^2.0.3",
+    "markdown-it-toc-and-anchor": "^4.1.1",
+    "markdown-it-toc-and-anchor-fork": "^2.1.1",
     "marked": "^0.3.6",
     "normalize.css": "^5.0.0",
     "prismjs": "^1.5.1",
