--- a/package.json
+++ b/package.json
@@ -68,8 +68,10 @@
     "markdown-it-toc-and-anchor": "^4.1.1",
     "markdown-it-toc-and-anchor-fork": "^2.1.1",
     "marked": "^0.3.6",
+    "node-sass": "^3.10.1",
     "normalize.css": "^5.0.0",
     "prismjs": "^1.5.1",
+    "sass-loader": "^4.0.2",
     "timeago.js": "^2.0.2",
     "vue": "^2.0.1",
     "vue-resource": "^1.0.0",
