--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "es6-promise": "^4.0.0",
     "front-matter": "^2.1.0",
     "markdown-it": "^8.0.0",
+    "markdown-it-header-sections": "^0.2.2",
     "markdown-it-katex": "^2.0.3",
     "marked": "^0.3.6",
     "node-sass": "^3.10.1",
