--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,8 @@ before_install:
   - git clone --branch master https://github.com/IniZio/inizio.github.io.git dist
 
 install:
-  # - npm i -g yarn
-  # - yarn
-  - npm i
-  # - npm install unicode
+  - npm i -g yarn
+  - yarn
 
 script:
   - npm run build
