--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A blog based on Github pages by Vue.js 2 + Webpack 2",
   "main": "src/main.js",
   "scripts": {
+    "start": "node server.js",
     "dev": "webpack-dev-server --inline --hot",
     "prebuild": "rimraf dist/*",
     "build": "cross-env NODE_ENV=production webpack -p --progress --hide-modules",
