--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ script:
 after_script:
   - cd dist
   # - echo "inizio.github.io" > CNAME
+  - cp index.html 404.html
   - git add --all .
-  - git commit --message "automatically update from travis-ci"
-  - git push "https://${GH_TOKEN}@${GH_REF}" master:master --quiet
+  - git commit --message "Automatically update from travis-ci"
+  - git push "https://${GH_TOKEN}@${GH_REF}" master:master --quiet  > /dev/null 2>&1
