--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
     "stylus-loader": "^2.3.1",
     "vue-hot-reload-api": "^2.0.0",
     "vue-html-loader": "^1.2.3",
-    "vue-loader": "^9.5.1",
+    "vue-loader": "^10",
     "vue-style-loader": "^1.0.0",
-    "webpack": "2.1.0-beta.20",
-    "webpack-dev-server": "2.1.0-beta.0"
+    "webpack": "2.1.0-beta.27",
+    "webpack-dev-server": "2.1.0-beta.11"
   },
   "dependencies": {
     "es6-promise": "^4.0.0",
@@ -73,7 +73,8 @@
     "prismjs": "^1.5.1",
     "sass-loader": "^4.0.2",
     "timeago.js": "^2.0.2",
-    "vue": "^2.0.3",
+    "vue": "^2.1",
+    "vue-analytics": "^1.2.0",
     "vue-resource": "^1.0.0",
     "vue-router": "^2.0.0"
   }
