--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^10",
     "vue-style-loader": "^1.0.0",
+    "vue-template-compiler": "^2.0.0",
     "webpack": "2.1.0-beta.20",
     "webpack-dev-server": "2.1.0-beta.0"
   },
