--- a/.babelrc
+++ b/.babelrc
@@ -2,8 +2,8 @@
     "sourceMaps": true,
     "presets": ["es2015", "flow"],
     "plugins": [
+        "transform-decorators-legacy",
         "transform-react-jsx",
-        "transform-class-properties",
-        "transform-decorators"
+        "transform-class-properties"
     ]
 }
