--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "license": "ISC",
     "dependencies": {
         "axios": "^0.16.1",
+        "front-matter": "^2.1.2",
         "iotacss": "^1.0.1",
+        "markdown-it": "^8.3.1",
         "mobx": "^3.1.10",
         "mobx-react": "^4.1.8",
         "react": "^15.4.1",
@@ -24,6 +26,7 @@
         "babel-core": "^6.20.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-decorators": "^6.24.1",
+        "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "babel-plugin-transform-react-jsx": "^6.8.0",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-flow": "^6.23.0",
