--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ language: node_js
 
 sudo: false
 
-node_js: stable
+node_js: 6.10.0
 
 cache:
   directories:
@@ -14,9 +14,9 @@ cache:
 
 before_install:
   - rm -rf dist/
-  - git config --global user.name "inizio"
-  - git config --global user.email "digit4free@gmail.com"
-  - git clone --branch master https://github.com/IniZio/inizio.github.io.git dist
+  - git config --global user.name "${GH_NAME}"
+  - git config --global user.email "${GH_EMAIL}"
+  - git clone --branch master https://${GH_REF} dist
   - npm i -g yarn --cache-min 999999999
 
 install:
@@ -27,10 +27,8 @@ script:
 
 after_script:
   - cd dist
-  # - echo "inizio.github.io" > CNAME
   - cp index.html 404.html
   - git add --all .
   - git status
-  - git commit --message "Automatically update from travis-ci"
-  # - git push "https://${GH_TOKEN}@${GH_REF}" master:master --quiet  > /dev/null 2>&1
-  - git push "https://${GH_TOKEN}@${GH_REF}" master:master
+  - git commit --message "Automatic update from travis-ci"
+  - git push "https://${GH_TOKEN}@${GH_REF}" master:master --quiet  > /dev/null 2>&1
