--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,8 @@
 {
     "sourceMaps": true,
-    "presets": ["es2015", "flow"],
+    "presets": ["es2015", "flow", "react"],
     "plugins": [
         "transform-decorators-legacy",
-        "transform-react-jsx",
         "transform-class-properties"
     ]
 }
