--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "dev": "cross-env NODE_ENV=development node fuse.js dev",
         "build": "cross-env NODE_ENV=production node fuse.js build",
         "lint": "./node_modules/.bin/eslint",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "./node_modules/.bin/jest"
     },
     "author": "IniZio",
     "license": "ISC",
@@ -30,6 +30,7 @@
     "devDependencies": {
         "babel-core": "^6.20.0",
         "babel-eslint": "^7.2.3",
+        "babel-jest": "^20.0.3",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-decorators": "^6.24.1",
         "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -37,12 +38,16 @@
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-flow": "^6.23.0",
         "babel-preset-latest": "^6.16.0",
+        "babel-preset-react": "^6.24.1",
         "cross-env": "^5.0.0",
+        "eslint-config-standard": "^10.2.1",
         "eslint-plugin-react": "^7.0.1",
         "eslint-plugin-standard": "^3.0.1",
         "express": "^4.15.3",
         "fuse-box": "^2.0.0",
+        "jest": "^20.0.4",
         "node-sass": "^4.5.3",
+        "react-test-renderer": "^15.5.4",
         "rimraf": "^2.6.1",
         "uglify-js": "^2.0"
     }
