--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "markdown-it": "^8.3.1",
         "mobx": "^3.1.10",
         "mobx-react": "^4.1.8",
+        "query-string": "^4.3.4",
         "react": "^15.4.1",
         "react-dom": "^15.4.1",
         "react-list": "^0.8.6",
