--- a/package.json
+++ b/package.json
@@ -7,14 +7,11 @@
         "start": "node fuse.js",
         "dev": "cross-env NODE_ENV=development node fuse.js dev",
         "build": "cross-env NODE_ENV=production node fuse.js build",
-        "lint": "./node_modules/.bin/eslint",
+        "lint": "./node_modules/.bin/eslint ./src",
         "test": "./node_modules/.bin/jest"
     },
     "author": "IniZio",
     "license": "ISC",
-    "optionalDependencies": {
-        "eslint": "^3.19.0"
-    },
     "dependencies": {
         "axios": "^0.16.1",
         "front-matter": "^2.1.2",
@@ -41,6 +38,7 @@
         "babel-preset-latest": "^6.16.0",
         "babel-preset-react": "^6.24.1",
         "cross-env": "^5.0.0",
+        "eslint": "^3.19.0",
         "eslint-config-standard": "^10.2.1",
         "eslint-plugin-react": "^7.0.1",
         "eslint-plugin-standard": "^3.0.1",
