--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
         "cross-env": "^5.0.0",
         "eslint": "^3.19.0",
         "eslint-config-standard": "^10.2.1",
+        "eslint-plugin-import": "^2.3.0",
+        "eslint-plugin-node": "^5.0.0",
+        "eslint-plugin-promise": "^3.5.0",
         "eslint-plugin-react": "^7.0.1",
         "eslint-plugin-standard": "^3.0.1",
         "express": "^4.15.3",
