--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,10 @@
     "plugins": [
         "transform-decorators-legacy",
         "transform-class-properties"
-    ]
+    ],
+    "env": {
+        "production": {
+            "presets": ["react-optimize"]
+        }
+    }
 }
