--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "babel-preset-flow": "^6.23.0",
         "babel-preset-latest": "^6.16.0",
         "babel-preset-react": "^6.24.1",
+        "babel-preset-react-optimize": "^1.0.1",
         "cross-env": "^5.0.0",
         "eslint": "^3.19.0",
         "eslint-config-standard": "^10.2.1",
