--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "clipped-preset-webpack-frontend": "^0.1.4",
     "marko": "^4.7.2",
     "marko-loader": "^1.3.2"
+  },
+  "dependencies": {
+    "uikit": "^3.0.0-beta.35"
   }
 }
